--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+  <div class="header">
+    <h1>Paper2LaTeX</h1>
+    <h4>A tool for converting images into LaTeX documents</h4>
+    <hr>
+  </div>
 </body>
 </html>
